--- a/WebApiTest2/WebApiTest2.csproj
+++ b/WebApiTest2/WebApiTest2.csproj
@@ -84,6 +84,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Metod1\AddSqlData.cs" />
+    <Compile Include="Metod1\AddSqlDataBase.cs" />
+    <Compile Include="Metod1\GetJsonSQL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="wwwroot\SessionM.cs" />
     <Compile Include="wwwroot\index.aspx.cs">
@@ -99,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="SaveJson\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
